# thefuck-contrib-scoop

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/rules/: test_scoop_admin_global_apps.py  test_scoop_app_isnt_installed.py  test_scoop_config_remove.py  test_scoop_help_in_subcommand.py  test_scoop_install_already_installed.py  test_scoop_no_manifests_found.py  test_scoop_option_not_recognized.py  test_scoop_unknown_bucket.py  test_scoop_unknown_command.py  test_scoop_unknown_subcommand.py  test_scoop_update.py
thefuck_contrib_scoop/: scoop.py
thefuck_contrib_scoop/rules/: scoop_admin_global_apps.py  scoop_app_isnt_installed.py  scoop_config_remove.py  scoop_help_in_subcommand.py  scoop_install_already_installed.py  scoop_install_no_manifests_found.py  scoop_no_manifests_found.py  scoop_option_not_recognized.py  scoop_unknown_bucket.py  scoop_unknown_command.py  scoop_unknown_subcommand.py  scoop_update.py
